- fix preloader size on small screens

--- a/set_calc/mainapp/static/css/style.less
+++ b/set_calc/mainapp/static/css/style.less
@@ -38,3 +38,11 @@ body {
     transform: scale(1);
   }
 }
+
+@media screen and (max-width: 720px) {
+  .preloader {
+    &__img {
+      width: 90vw;
+    }
+  }
+}
